# cmake-ucx-ucc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_ucc.sh  run_ucx.sh  test.sh
.github/workflows/: cmake.yml
Tests/: CMakeLists.txt
Tests/Finducc/: CMakeLists.txt
Tests/Finducc/Test/: CMakeLists.txt  main.cpp
Tests/Finducx/: CMakeLists.txt
Tests/Finducx/Test/: CMakeLists.txt
Tests/ucc/: CMakeLists.txt
Tests/ucx/: CMakeLists.txt
cmake/: Finducc.cmake  Finducp.cmake  Finducs.cmake  Finduct.cmake  Finducx.cmake
test/Finducc/: CMakeLists.txt
test/Finducc/Test/: CMakeLists.txt
test/Finducx/: CMakeLists.txt
test/Finducx/Test/: CMakeLists.txt
test/ucc/: CMakeLists.txt  impl.cpp  main.cpp  utils.cpp  utils.hpp
test/ucx/: CMakeLists.txt  README.md  main.cpp  test_ucp.c  test_uct.c  ucp_client_server.c  ucp_hello_world.c
